adds devise and i18n:cs as default

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+  <div class="row">
+    <% flash.each do |name, msg| %>
+      <%= content_tag(:div, msg, class:"alert alert-#{name}") %>
+    <% end %>
+  </div>
+  
+  <%= yield %>
 
 </body>
 </html>
