--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= render 'layouts/header' %>
+  
   <div class="row">
     <% flash.each do |name, msg| %>
       <%= content_tag(:div, msg, class:"alert alert-#{name}") %>
