adds style to devise views

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,19 +1,27 @@
-<h2>Change your password</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
-
-  <%= f.input :reset_password_token, as: :hidden %>
-  <%= f.full_error :reset_password_token %>
-
-  <div class="form-inputs">
-    <%= f.input :password, label: "New password", required: true, autofocus: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, label: "Confirm your new password", required: true %>
+<div class="form-wrapper">
+  <div class="form-login col-xs-12 col-md-6 col-md-offset-3">
+    <div class="form-title">
+      <h3>Změna hesla</h3>
+    </div>
+    <hr>
+    <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+      <%= f.error_notification %>
+    
+      <%= f.input :reset_password_token, as: :hidden %>
+      <%= f.full_error :reset_password_token %>
+      <br>
+      <div class="form-inputs">
+        <%= f.input :password, label: "Nové heslo", required: true, autofocus: true, hint: ("#{@minimum_password_length} znaků je minimum" if @minimum_password_length) %>
+        <%= f.input :password_confirmation, label: "Potvrďte své nové heslo", required: true %>
+      </div>
+    
+      <div class="form-actions">
+        <%= f.button :submit, "Změň moje heslo", class: "btn btn-lg btn-primary btn-block" %>
+      </div>
+    <% end %>
+    <br>
+    <div class="form-links">
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
