--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,12 +15,13 @@
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
             
-            <li><%= link_to "Uživatelé", root_path %></li>
+            <li><%= link_to "Uživatelé", users_path %></li>
             
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Account <b class="caret"></b></a>
               <ul class="dropdown-menu" role="menu">
                 
+                <li><%= link_to "Editovat účet", edit_user_registration_path %></li>
                 <li class="divider"></li>
                 <li><%= link_to "Odhlásit se", destroy_user_session_path, method: "delete" %></li>
               </ul>
